# legal-rag-pipeline

./: .gitignore  CLAUDE.md  legal-rag-ingestion-v2.md  pyproject.toml  verdict-ai-ingestion-pipeline-v2-update.md  verdict-ai-retrieval-pipeline-v2-update.md
.claude/agents/: legal-domain-expert.md  pipeline-researcher.md  quality-auditor.md
.claude/commands/: benchmark.md  build-parallel.md  ingest-test.md  learn.md  plan-phase.md  session-end.md  session-start.md  validate-chunks.md
.claude/rules/: testing.md
Indian_kanoon/: API_DOCUMENTATION.md  OFFICIAL_PYTHON_CLIENT.md  TERMS_AND_CONDITIONS.md  ikapi_reference.py
configs/: chunking.yaml  embedding.yaml  enrichment.yaml  evaluation.yaml  hallucination.yaml  knowledge_graph.yaml  llm.yaml  parsing.yaml  query.yaml  retrieval.yaml  sources.yaml
data/eval/: test_queries.json
docs/: chunking_strategies.md  embedding_fine_tuning.md  enrichment_guide.md  evaluation_framework.md  hallucination_mitigation.md  indian_legal_structure.md  knowledge_graph_schema.md  metadata_schema.md  parsing_guide.md  pipeline_architecture.md  query_intelligence.md
docs/research/: docling-api-v2.74.md
plans/: phase-0-query-intelligence.md  phase-1-acquisition.md  phase-2-parsing.md  phase-4-enrichment.md  phase-6-knowledge-graph.md  phase-7-retrieval.md  session-log.md
research-reports/: nvidia-nim-api-model-catalog-2026-02-28.md  ollama-models-legal-rag-16gb-vram-2026-02-28.md
scripts/: smoke_test_llm.py
src/acquisition/: __init__.py  __main__.py  _config.py  _exceptions.py  _http_client.py  _models.py  _rate_limiter.py  (+4 more)
(+254 files in other folders)
