[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legal-rag-pipeline"
version = "0.1.0"
description = "Production-grade ingestion pipeline for Indian legal documents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "structlog>=24.1",
    "aiohttp>=3.9,<4",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "tenacity>=8.2",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "aioresponses>=0.7",
    "ruff>=0.4",
]
chunking-ml = [
    "sentence-transformers>=2.2",
    "spacy>=3.7",
]
chunking-llm = [
    "anthropic>=0.18",
]
embedding = [
    "qdrant-client>=1.9",
    "redis[hiredis]>=5.0",
    "torch>=2.0",
    "transformers>=4.40",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (integration tests, live API calls)",
]
